[gd_scene load_steps=19 format=2]

[ext_resource path="res://art/poo_bomb_sprite.png" type="Texture" id=1]
[ext_resource path="res://art/poo_bomb_fly_sprite_2.png" type="Texture" id=2]
[ext_resource path="res://art/poo_bomb_fly_sprite.png" type="Texture" id=3]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion08.png" type="Texture" id=4]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion00.png" type="Texture" id=5]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion01.png" type="Texture" id=6]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion05.png" type="Texture" id=7]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion02.png" type="Texture" id=8]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion04.png" type="Texture" id=9]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion06.png" type="Texture" id=10]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion07.png" type="Texture" id=11]
[ext_resource path="res://art/projectile/kenney_smokeparticleassets/PNG/Explosion/explosion03.png" type="Texture" id=12]
[ext_resource path="res://src/technical/pulsing_tween.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/technical/abilities/weapon_object_poo_bomb.gd" type="Script" id=14]

[sub_resource type="CapsuleShape2D" id=4]
radius = 100.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 210.28

[sub_resource type="AnimatedTexture" id=6]
flags = 4
frames = 2
fps = 8.0
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[node name="PooBomb" type="Area2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Undershadow" type="Sprite" parent="Sprite"]
modulate = Color( 0, 0, 0, 0.196078 )
show_behind_parent = true
position = Vector2( 0, 100 )
scale = Vector2( 1, 0.25 )
texture = ExtResource( 1 )

[node name="AnimationTween_SpritePulsing" parent="Sprite" instance=ExtResource( 13 )]

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 2 )
disabled = true

[node name="AmbientParticles" type="CPUParticles2D" parent="."]
position = Vector2( -5.62374, -14.0193 )
amount = 4
lifetime = 60.0
speed_scale = 4.0
explosiveness = 1.0
texture = SubResource( 6 )
emission_shape = 3
emission_points = PoolVector2Array( 10, 0, 5, 0, 5, 10 )
emission_colors = PoolColorArray(  )
gravity = Vector2( 0, 0 )
angular_velocity = 15.0
orbit_velocity = 0.05
linear_accel = 0.01
tangential_accel = 0.1
scale_amount = 0.5
color = Color( 1, 1, 1, 0.784314 )

[node name="ExplosionAnimation" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.85, 0.85 )
frames = SubResource( 5 )
frame = 8

[node name="OnTriggerTimeToExplode" type="Timer" parent="ExplosionAnimation"]
one_shot = true

[node name="TriggeredFlashStepTimer" type="Timer" parent="ExplosionAnimation"]

[node name="ExplosionTween" type="Tween" parent="ExplosionAnimation"]

[node name="ExplosionSE" type="AudioStreamPlayer2D" parent="ExplosionAnimation"]

[node name="TriggeredSE" type="AudioStreamPlayer2D" parent="."]

[node name="TotalLifespan" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_PooBomb_body_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="timeout" from="ExplosionAnimation/OnTriggerTimeToExplode" to="." method="_on_OnTriggerTimeToExplode_timeout"]
[connection signal="timeout" from="ExplosionAnimation/TriggeredFlashStepTimer" to="." method="_on_TriggeredFlashStepTimer_timeout"]
[connection signal="tween_all_completed" from="ExplosionAnimation/ExplosionTween" to="." method="_on_ExplosionTween_tween_all_completed"]
[connection signal="timeout" from="TotalLifespan" to="." method="_on_TotalLifespan_timeout"]
